Update Lane Detection Problem-checkpoint.ipynb

--- a/Lane Detection Problem-checkpoint.ipynb
+++ b/Lane Detection Problem-checkpoint.ipynb
@@ -95,11 +95,17 @@
    "outputs": [],
    "source": [
     "video=cv2.VideoCapture(\"lane_detection_video.mp4\")\n",
+    "frame_width = int(video.get(3))\n",
+    "frame_height = int(video.get(4))\n",
+    "size = (frame_width, frame_height)\n",
+    "fps=video.get(cv2.CAP_PROP_FPS)\n",
+    "result = cv2.VideoWriter('Lane Detected.avi', cv2.VideoWriter_fourcc(*'MJPG'),fps, size)\n",
     "while video.isOpened():\n",
     "    isgrabbed,frame=video.read()\n",
     "    if not isgrabbed:\n",
     "        break\n",
     "    frame=get_detected_lane(frame)\n",
+    "    result.write(frame)",
     "    cv2.imshow(\"Lane detection video\",frame)\n",
     "    cv2.waitKey(20)\n",
     "video.release()\n",
