Update Lane Detection Problem-checkpoint.ipynb

--- a/Lane Detection Problem-checkpoint.ipynb
+++ b/Lane Detection Problem-checkpoint.ipynb
@@ -105,7 +105,7 @@
     "    if not isgrabbed:\n",
     "        break\n",
     "    frame=get_detected_lane(frame)\n",
-    "    result.write(frame)",
+    "    result.write(frame)\n",
     "    cv2.imshow(\"Lane detection video\",frame)\n",
     "    cv2.waitKey(20)\n",
     "video.release()\n",
